--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@xulf/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -73,13 +72,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.14",
-    "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "@types/react-is": "18.3.0",
     "@types/styled-components": "5.1.26",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^1.3.1",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^13.13.0",
@@ -98,9 +100,11 @@
     "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "^20.3.3",
+    "postcss": "^8.5.3",
     "prettier": "^2.6.2",
     "projects": "^1.6.1",
     "storybook": "^8.2.8",
+    "tailwindcss": "^4.1.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
@@ -109,5 +113,5 @@
     "vite-plugin-dts": "^4.5.0",
     "vitest": "^1.3.1"
   },
-  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
+  "packageManager": "yarn@4.5.0"
 }
