--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/server": "11.11.0",
@@ -16,6 +17,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^6.6.0",
     "@vercel/analytics": "^1.4.1",
     "bl": "^6.0.18",
     "emailjs-com": "^3.2.0",
@@ -102,12 +104,13 @@
     "nx": "^20.3.3",
     "postcss": "^8.5.3",
     "prettier": "^2.6.2",
+    "prisma": "^6.6.0",
     "projects": "^1.6.1",
     "storybook": "^8.2.8",
     "tailwindcss": "^4.1.3",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.5.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.14",
     "vite-plugin-dts": "^4.5.0",
