--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@xulf/backend": ["libs/backend/src/index.ts"],
+      "@xulf/db": ["libs/db/src/index.ts"],
       "@xulf/essentials": ["libs/essentials/src/index.ts"],
       "@xulf/essentials/server": ["libs/essentials/src/server.ts"],
       "@xulf/layouts": ["libs/layouts/src/index.ts"],
