--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/internals": "^6.6.0",
     "@vercel/analytics": "^1.4.1",
     "bl": "^6.0.18",
+    "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.9",
     "hawk": "^9.0.2",
