--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.9",
     "hawk": "^9.0.2",
+    "lodash": "^4.17.21",
     "next": "^14.2.23",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
@@ -86,6 +87,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
