--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^6.10.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-flow-renderer": "^10.3.17",
     "react-is": "18.3.1",
     "react-use-precision-timer": "^3.5.5",
     "reflect-metadata": "^0.1.13",
