--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "^14.2.23",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
+    "plop": "^4.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-flow-renderer": "^10.3.17",
