--- a/apps/xulf-ui/xulf-ui/project.json
+++ b/apps/xulf-ui/xulf-ui/project.json
@@ -5,5 +5,25 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project xulf-ui --web",
-  "targets": {}
+  "targets": {
+    "generate-editor-meta": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "ts-node libs/modules/tools/generate-editor-meta.ts"
+      }
+    },
+    "build": {
+      "executor": "@nx/next:build",
+      "dependsOn": [
+        {
+          "target": "generate-editor-meta",
+          "projects": "self"
+        }
+      ],
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/apps/xulf-ui"
+      }
+    }
+  }
 }
