--- a/apps/xulf-ui/xulf-ui/tsconfig.json
+++ b/apps/xulf-ui/xulf-ui/tsconfig.json
@@ -32,7 +32,8 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "src/middleware.ts",
-    "types/next-auth.d.ts"
+    "types/next-auth.d.ts",
+    "../../../dist/apps/xulf-ui/.next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
