--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/core": "^7.12.2",
     "@mantine/hooks": "^7.12.2",
     "@mantine/next": "^6.0.22",
+    "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^6.1.10",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.10",
@@ -45,6 +46,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "styled-components": "5.3.6",
+    "ts-morph": "^25.0.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
