--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "rxjs": "^7.8.0",
     "styled-components": "5.3.6",
     "ts-morph": "^25.0.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
