--- a/apps/xulf-ui/xulf-ui/project.json
+++ b/apps/xulf-ui/xulf-ui/project.json
@@ -24,6 +24,13 @@
       "options": {
         "outputPath": "dist/apps/xulf-ui"
       }
+    },
+    "get-clean-seed": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npx ts-node libs/db/scripts/cleanSeed.ts",
+        "cwd": "."
+      }
     }
   }
 }
